Configures Spotless and format entire code-base